--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -14,6 +14,7 @@
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.92 0.04 86.47);
   --primary-foreground: oklch(0.31 0.02 86.64);
+  --primary-rgb: 120, 119, 198;
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
